public static class ConstantHelper
{
    public static class Tags
    {
        public static readonly string PLAYER = "Player";
        public static readonly string ENEMY = "Enemy";
        public static readonly string PROJECTILE = "Projectile";
        public static readonly string POWERUP = "PowerUp";
        public static readonly string GROUND = "Ground";
        public static readonly string OBSTACLE = "Obstacle";
        public static readonly string HIDABLE = "Hidable";
        public static readonly string COLLECTABLE = "Collectable";
        public static readonly string STAGE = "Stage";
        public static readonly string PORTAL = "Portal";
    }

    public static class Combat
    {
        public static readonly string ANIMATOR_PARAM_ATTACK = "Attack";
        public static readonly string ANIMATOR_PARAM_USE_SKILL = "UseSkill";
        public static readonly string ANIMATOR_PARAM_WALK = "Walk";
        public static readonly string ANIMATOR_PARAM_RUN = "Run";
        public static readonly string ANIMATOR_PARAM_JUMP = "Jump";
        public static readonly string ANIMATOR_PARAM_HIDE = "Hide";
        public static readonly string ANIMATOR_PARAM_HIT= "Hit";
        public static readonly string ANIMATOR_PARAM_DIE = "Die";
    }
}
